cmake_minimum_required(VERSION 3.14)
project(basic-00-example)

set(CMAKE_CXX_STANDARD 17)
add_executable(sample NavajaSuizaGodClass.h NavajaSuizaGodClass.cpp Cuchilla.h Cuchilla.cpp descorchador.h descorchador.cpp destornillador.h destornillador.cpp main.cpp Navaja.h Navaja.cpp Tijeras.h Tijeras.cpp  )